initial implemented new endpoint for mssql users
