# src/lib/Endpoint/SqlSrvUsers/Exception/InvalidQuery.php
@@ -1,0 +1,16 @@
+<?php
+
+declare(strict_types=1);
+
+/**
+ * tubee
+ *
+ * @copyright   Copryright (c) 2017-2019 gyselroth GmbH (https://gyselroth.com)
+ * @license     GPL-3.0 https://opensource.org/licenses/GPL-3.0
+ */
+
+namespace Tubee\Endpoint\SqlSrvUsers\Exception;
+
+class InvalidQuery extends \Tubee\Exception
+{
+}
